--- a/Locale/jpn/LC_MESSAGES/blogs.po
+++ b/Locale/jpn/LC_MESSAGES/blogs.po
@@ -76,6 +76,9 @@ msgstr "１ページに表示する記事数"
 msgid "%s articles"
 msgstr "%s 件"
 
+msgid "%s article"
+msgstr "%s 件"
+
 msgid "Use content comment"
 msgstr "コメントを付けられる"
 
