文言変更「xxxを使用する」へ統一 Refs https://github.com/NetCommons3/NetCommons3/issues/533

--- a/Locale/jpn/LC_MESSAGES/blogs.po
+++ b/Locale/jpn/LC_MESSAGES/blogs.po
@@ -80,7 +80,7 @@ msgid "Use comment"
 msgstr "コメントを付けられる"
 
 msgid "Use sns"
-msgstr "SNSボタンを使う"
+msgstr "SNSボタンを使用する"
 
 msgid "Blog"
 msgstr "ブログ"
